--- a/index.html
+++ b/index.html
@@ -47,23 +47,23 @@
 <body>
 
 
-  <section class="hero">
-    <div class="hero-body">
-      <div class="container is-max-desktop">
-        <div class="columns is-centered">
-          <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
-            <div class="is-size-5 publication-authors">
-              <!-- Paper authors -->
-              <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
-                <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-                  </span>
-                  </div>
 
+                  <section class="hero">
+                    <div class="hero-body">
+                      <div class="container is-max-desktop">
+                        <div class="columns is-centered">
+                          <div class="column has-text-centered">
+                            <h1 class="title is-1 publication-title">Towards Reasoning Era: A Survey of Long Chain-of-Thought</h1>
+                            <div class="is-size-5 publication-authors">
+                              <!-- Paper authors -->
+                              <span class="author-block">
+                                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Qiguang Chen</a><sup>*</sup>,</span>
+                                <span class="author-block">
+                                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Libo Qin</a><sup>*</sup>,</span>
+                                  <span class="author-block">
+                                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Jinhao Liu</a>
+                                  </span>
+                                  </div>
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">Institution Name<br>Conferance name and year</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
