--- a/index.html
+++ b/index.html
@@ -73,12 +73,13 @@
                                     <a href="https://aaron617.github.io/" target="_blank">MengKang Hu</a>,
                                   </span>
                                   <span class="author-block">
-                                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Wanxiang Che</a>
+                                    <a href="https://chewanxiang.com/" target="_blank">Wanxiang Che</a>
                                   </span>
                                   </div>
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Harbin Institude of Technology<br>Conferance name and year</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="author-block">Harbin Institude of Technology</span>
+                    <!-- <span class="author-block">Harbin Institude of Technology<br>Conferance name and year</span> -->
+                    <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                   </div>
 
                   <div class="column has-text-centered">
