--- a/index.html
+++ b/index.html
@@ -213,50 +213,67 @@
 <section class="section">
   <div class="container">
     <div class="has-text-centered">
-      <h1 class="title is-2">Reasoning Forward</h1>
+      <h1 class="title is-2">Paper List</h1>
       <p class="subtitle is-4"></p>
     </div>
     <div class="content">
-      <div id="type" style="display:none;">Reasoning Forward</div>
+      <div id="type" style="display:none;">Paper List</div>
       <ul>
         <div id="mllm-paperlist">
-          <!-- Reasoning Imitation Long Chain Learning -->
-          <h2>Reasoning Imitation Long Chain Learning</h2>
+          <!-- Deep Reasoning -->
+          <h2>Deep Reasoning</h2>
+
+          <!-- Deep Reasoning Execution -->
+          <h3>Deep Reasoning Execution</h3>
           <ul>
-            <li><i><b>O1 Replication Journey: A Strategic Progress Report -- Part 1</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>O1 Replication Journey--Part 2: Surpassing O1-preview through Simple Distillation, Big Progress or Bitter Lesson?</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>Marco-o1: Towards Open Reasoning Models for Open-Ended Solutions</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>Enhancing LLM Reasoning with Reward-guided Tree Search</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>o1-Coder: an o1 Replication for Coding</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>Imitate, Explore, and Self-Improve: A Reproduction Report on Slow-thinking Reasoning Systems</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>GAIRNLP/LIMO</b></i>, Unknown Authors <code>Unknown Year</code></li>
+            <li><i><b>Interactive Evolution: A Neural-Symbolic Self-Training Framework For Large Language Models</b></i>, Unknown Authors <code>2024.06</code></li>
+            <li><i><b>SKIntern: Internalizing Symbolic Knowledge for Distilling Better CoT Capabilities into Small Language Models</b></i>, Unknown Authors <code>2025.01</code></li>
+            <li><i><b>Guiding language model reasoning with planning tokens</b></i>, Unknown Authors <code>2023.10</code></li>
+            <li><i><b>Efficient Reasoning with Hidden Thinking</b></i>, Unknown Authors <code>2025.01</code></li>
+            <li><i><b>Scalable Language Models with Posterior Inference of Latent Thought Vectors</b></i>, Unknown Authors <code>2025.02</code></li>
+            <li><i><b>Inner Thinking Transformer: Leveraging Dynamic Depth Scaling to Foster Adaptive Internal Thinking</b></i>, Unknown Authors <code>2025.02</code></li>
+            <li><i><b>Scaling up Test-Time Compute with Latent Reasoning: A Recurrent Depth Approach</b></i>, Unknown Authors <code>2025.02</code></li>
+            <li><i><b>Chain-of-Thought Prompting Elicits Reasoning in Large Language Models</b></i>, Unknown Authors <code>2022.11</code></li>
+            <li><i><b>Cross-lingual Prompting: Improving Zero-shot Chain-of-Thought Reasoning across Languages</b></i>, Unknown Authors <code>2023.07</code></li>
+            <li><i><b>{A}uto{CAP}: Towards Automatic Cross-lingual Alignment Planning for Zero-shot Chain-of-Thought</b></i>, Unknown Authors <code>2024.08</code></li>
+            <li><i><b>CodeI/O: Condensing Reasoning Patterns via Code Input-Output Prediction</b></i>, Unknown Authors <code>2025.02</code></li>
+            <li><i><b>Program of Thoughts Prompting: Disentangling Computation from Reasoning for Numerical Reasoning Tasks</b></i>, Unknown Authors <code>2023.11</code></li>
+            <li><i><b>Chain of Code: Reasoning with a Language Model-Augmented Code Emulator</b></i>, Unknown Authors <code>2024.07</code></li>
+            <li><i><b>Lean-star: Learning to interleave thinking and proving</b></i>, Unknown Authors <code>2024.07</code></li>
+            <li><i><b>Quiet-star: Language models can teach themselves to think before speaking</b></i>, Unknown Authors <code>2024.03</code></li>
+            <li><i><b>Training large language models to reason in a continuous latent space</b></i>, Unknown Authors <code>2024.12</code></li>
           </ul>
 
-          <!-- Reasoning Imitation Why -->
-          <h2>Reasoning Imitation Why</h2>
+          <!-- Deep Reasoning Learning -->
+          <h3>Deep Reasoning Learning</h3>
           <ul>
-            <li><i><b>When Evolution Strategy Meets Language Models Tuning</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>Metastable Dynamics of Chain-of-Thought Reasoning: Provable Benefits of Search, RL and Distillation</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>SFT Memorizes, RL Generalizes: A Comparative Study of Foundation Model Post-training</b></i>, Unknown Authors <code>Unknown Year</code></li>
-          </ul>
-
-          <!-- Reasoning Self Learning -->
-          <h2>Reasoning Self Learning</h2>
-          <ul>
-            <li><i><b>STaR: Bootstrapping Reasoning With Reasoning</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>ReST: Reinforced Self-Training for Language Modeling</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>Self-Refine: Iterative Refinement with Self-Feedback</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>V-star: Training Verifiers for Self-Taught Reasoners</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>Quiet-STaR: Language Models Can Teach Themselves to Think Before Speaking</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>Enhancing Large Vision Language Models with Self-Training on Image Comprehension</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>Interactive Evolution: A Neural-Symbolic Self-Training Framework for Large Language Models</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>ReFT: Representation Finetuning for Language Models</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>ReST-EM: Beyond Human Data: Scaling Self-Training for Problem-Solving with Language Models</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>B-STaR: Monitoring and Balancing Exploration and Exploitation in Self-Taught Reasoner</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>Recursive Introspection: Teaching Language Model Agents How to Self-Improve</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>ReST-MCTS*: LLM Self-Training via Process Reward Guided Tree Search</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>Small LLMs Can Master Reasoning with Self-Evolved Deep Thinking (Rstar-Math)</b></i>, Unknown Authors <code>Unknown Year</code></li>
-            <li><i><b>LLMs Can Teach Themselves to Better Predict the Future</b></i>, Unknown Authors <code>Unknown Year</code></li>
+            <li><i><b>Portable Reward Tuning: Towards Reusable Fine-Tuning across Different Pretrained Models</b></i>, Unknown Authors <code>2025.02</code></li>
+            <li><i><b>STeCa: Step-level Trajectory Calibration for LLM Agent Learning</b></i>, Unknown Authors <code>2025.02</code></li>
+            <li><i><b>V-star: Training verifiers for self-taught reasoners</b></i>, Unknown Authors <code>2024.02</code></li>
+            <li><i><b>Beyond Human Data: Scaling Self-Training for Problem-Solving with Language Models</b></i>, Unknown Authors <code>2024.04</code></li>
+            <li><i><b>FastMCTS: A Simple Sampling Strategy for Data Synthesis</b></i>, Unknown Authors <code>2025.02</code></li>
+            <li><i><b>Interactive Evolution: A Neural-Symbolic Self-Training Framework For Large Language Models</b></i>, Unknown Authors <code>2024.06</code></li>
+            <li><i><b>LLMs Can Teach Themselves to Better Predict the Future</b></i>, Unknown Authors <code>2025.02</code></li>
+            <li><i><b>Deepseek-r1: Incentivizing reasoning capability in llms via reinforcement learning</b></i>, Unknown Authors <code>2025.01</code></li>
+            <li><i><b>Sft memorizes, rl generalizes: A comparative study of foundation model post-training</b></i>, Unknown Authors <code>2025.01</code></li>
+            <li><i><b>Demystifying Long Chain-of-Thought Reasoning in LLMs</b></i>, Unknown Authors <code>2025.02</code></li>
+            <li><i><b>Advancing Math Reasoning in Language Models: The Impact of Problem-Solving Data, Data Synthesis Methods, and Training Stages</b></i>, Unknown Authors <code>2025.01</code></li>
+            <li><i><b>Don't Get Lost in the Trees: Streamlining LLM Reasoning by Overcoming Tree Search Exploration Pitfalls</b></i>, Unknown Authors <code>2025.02</code></li>
+            <li><i><b>Large Language Models Are Reasoning Teachers</b></i>, Unknown Authors <code>2023.07</code></li>
+            <li><i><b>Open R1</b></i>, Unknown Authors <code>2025.01</code></li>
+            <li><i><b>Enhancing Reasoning Capabilities of LLMs via Principled Synthetic Logic Corpus</b></i>, Unknown Authors <code>2024.09</code></li>
+            <li><i><b>System-2 Mathematical Reasoning via Enriched Instruction Tuning</b></i>, Unknown Authors <code>2024.12</code></li>
+            <li><i><b>Brain-Inspired Two-Stage Approach: Enhancing Mathematical Reasoning by Imitating Human Thought Processes</b></i>, Unknown Authors <code>2024.03</code></li>
+            <li><i><b>Distillation Scaling Laws</b></i>, Unknown Authors <code>2025.02</code></li>
+            <li><i><b>Unveiling the Mechanisms of Explicit CoT Training: How Chain-of-Thought Enhances Reasoning Generalization</b></i>, Unknown Authors <code>2025.02</code></li>
+            <li><i><b>O1 Replication Journey--Part 2: Surpassing O1-preview through Simple Distillation, Big Progress or Bitter Lesson?</b></i>, Unknown Authors <code>2024.11</code></li>
+            <li><i><b>Imitate, explore, and self-improve: A reproduction report on slow-thinking reasoning systems</b></i>, Unknown Authors <code>2024.12</code></li>
+            <li><i><b>Openai o1 system card</b></i>, Unknown Authors <code>2024.12</code></li>
+            <li><i><b>LIMO: Less is More for Reasoning</b></i>, Unknown Authors <code>2025.02</code></li>
+            <li><i><b>RedStar: Does Scaling Long-CoT Data Unlock Better Slow-Reasoning Systems?</b></i>, Unknown Authors <code>2025.01</code></li>
+            <li><i><b>Star: Bootstrapping reasoning with reasoning</b></i>, Unknown Authors <code>2022.11</code></li>
+            <li><i><b>BOLT: Bootstrap Long Chain-of-Thought in Language Models without Distillation</b></i>, Unknown Authors <code>2025.02</code></li>
+            <li><i><b>Reinforced self-training (rest) for language modeling</b></i>, Unknown Authors <code>2023.08</code></li>
           </ul>
         </div>
       </ul>
