--- a/index.html
+++ b/index.html
@@ -226,54 +226,55 @@
           <!-- Deep Reasoning Execution -->
           <h3>Deep Reasoning Execution</h3>
           <ul>
-            <li><i><b>Interactive Evolution: A Neural-Symbolic Self-Training Framework For Large Language Models</b></i>, Unknown Authors <code>2024.06</code></li>
-            <li><i><b>SKIntern: Internalizing Symbolic Knowledge for Distilling Better CoT Capabilities into Small Language Models</b></i>, Unknown Authors <code>2025.01</code></li>
-            <li><i><b>Guiding language model reasoning with planning tokens</b></i>, Unknown Authors <code>2023.10</code></li>
-            <li><i><b>Efficient Reasoning with Hidden Thinking</b></i>, Unknown Authors <code>2025.01</code></li>
-            <li><i><b>Scalable Language Models with Posterior Inference of Latent Thought Vectors</b></i>, Unknown Authors <code>2025.02</code></li>
-            <li><i><b>Inner Thinking Transformer: Leveraging Dynamic Depth Scaling to Foster Adaptive Internal Thinking</b></i>, Unknown Authors <code>2025.02</code></li>
-            <li><i><b>Scaling up Test-Time Compute with Latent Reasoning: A Recurrent Depth Approach</b></i>, Unknown Authors <code>2025.02</code></li>
-            <li><i><b>Chain-of-Thought Prompting Elicits Reasoning in Large Language Models</b></i>, Unknown Authors <code>2022.11</code></li>
-            <li><i><b>Cross-lingual Prompting: Improving Zero-shot Chain-of-Thought Reasoning across Languages</b></i>, Unknown Authors <code>2023.07</code></li>
-            <li><i><b>{A}uto{CAP}: Towards Automatic Cross-lingual Alignment Planning for Zero-shot Chain-of-Thought</b></i>, Unknown Authors <code>2024.08</code></li>
-            <li><i><b>CodeI/O: Condensing Reasoning Patterns via Code Input-Output Prediction</b></i>, Unknown Authors <code>2025.02</code></li>
-            <li><i><b>Program of Thoughts Prompting: Disentangling Computation from Reasoning for Numerical Reasoning Tasks</b></i>, Unknown Authors <code>2023.11</code></li>
-            <li><i><b>Chain of Code: Reasoning with a Language Model-Augmented Code Emulator</b></i>, Unknown Authors <code>2024.07</code></li>
-            <li><i><b>Lean-star: Learning to interleave thinking and proving</b></i>, Unknown Authors <code>2024.07</code></li>
-            <li><i><b>Quiet-star: Language models can teach themselves to think before speaking</b></i>, Unknown Authors <code>2024.03</code></li>
-            <li><i><b>Training large language models to reason in a continuous latent space</b></i>, Unknown Authors <code>2024.12</code></li>
+            <li><i><b>Interactive Evolution: A Neural-Symbolic Self-Training Framework For Large Language Models</b></i>, Xu et al., <code>2024.06</code></li>
+            <li><i><b>SKIntern: Internalizing Symbolic Knowledge for Distilling Better CoT Capabilities into Small Language Models</b></i>, Liao et al., <code>2025.01</code></li>
+            <li><i><b>Guiding language model reasoning with planning tokens</b></i>, Wang et al., <code>2023.10</code></li>
+            <li><i><b>Efficient Reasoning with Hidden Thinking</b></i>, Shen et al., <code>2025.01</code></li>
+            <li><i><b>Scalable Language Models with Posterior Inference of Latent Thought Vectors</b></i>, Kong et al., <code>2025.02</code></li>
+            <li><i><b>Inner Thinking Transformer: Leveraging Dynamic Depth Scaling to Foster Adaptive Internal Thinking</b></i>, Chen et al., <code>2025.02</code></li>
+            <li><i><b>Scaling up Test-Time Compute with Latent Reasoning: A Recurrent Depth Approach</b></i>, Geiping et al., <code>2025.02</code></li>
+            <li><i><b>Chain-of-Thought Prompting Elicits Reasoning in Large Language Models</b></i>, Wei et al., <code>2022.11</code></li>
+            <li><i><b>Cross-lingual Prompting: Improving Zero-shot Chain-of-Thought Reasoning across Languages</b></i>, Qin et al., <code>2023.07</code></li>
+            <li><i><b>{A}uto{CAP}: Towards Automatic Cross-lingual Alignment Planning for Zero-shot Chain-of-Thought</b></i>, Zhang et al., <code>2024.08</code></li>
+            <li><i><b>CodeI/O: Condensing Reasoning Patterns via Code Input-Output Prediction</b></i>, Li et al., <code>2025.02</code></li>
+            <li><i><b>Program of Thoughts Prompting: Disentangling Computation from Reasoning for Numerical Reasoning Tasks</b></i>, Wenhu Chen and Xueguang Ma and Xinyi Wang and William W. Cohen et al., <code>2023.11</code></li>
+            <li><i><b>Chain of Code: Reasoning with a Language Model-Augmented Code Emulator</b></i>, Li et al., <code>2024.07</code></li>
+            <li><i><b>Lean-star: Learning to interleave thinking and proving</b></i>, Lin et al., <code>2024.07</code></li>
+            <li><i><b>Quiet-star: Language models can teach themselves to think before speaking</b></i>, Zelikman et al., <code>2024.03</code></li>
+            <li><i><b>Training large language models to reason in a continuous latent space</b></i>, Hao et al., <code>2024.12</code></li>
           </ul>
 
           <!-- Deep Reasoning Learning -->
           <h3>Deep Reasoning Learning</h3>
           <ul>
-            <li><i><b>Portable Reward Tuning: Towards Reusable Fine-Tuning across Different Pretrained Models</b></i>, Unknown Authors <code>2025.02</code></li>
-            <li><i><b>STeCa: Step-level Trajectory Calibration for LLM Agent Learning</b></i>, Unknown Authors <code>2025.02</code></li>
-            <li><i><b>V-star: Training verifiers for self-taught reasoners</b></i>, Unknown Authors <code>2024.02</code></li>
-            <li><i><b>Beyond Human Data: Scaling Self-Training for Problem-Solving with Language Models</b></i>, Unknown Authors <code>2024.04</code></li>
-            <li><i><b>FastMCTS: A Simple Sampling Strategy for Data Synthesis</b></i>, Unknown Authors <code>2025.02</code></li>
-            <li><i><b>Interactive Evolution: A Neural-Symbolic Self-Training Framework For Large Language Models</b></i>, Unknown Authors <code>2024.06</code></li>
-            <li><i><b>LLMs Can Teach Themselves to Better Predict the Future</b></i>, Unknown Authors <code>2025.02</code></li>
-            <li><i><b>Deepseek-r1: Incentivizing reasoning capability in llms via reinforcement learning</b></i>, Unknown Authors <code>2025.01</code></li>
-            <li><i><b>Sft memorizes, rl generalizes: A comparative study of foundation model post-training</b></i>, Unknown Authors <code>2025.01</code></li>
-            <li><i><b>Demystifying Long Chain-of-Thought Reasoning in LLMs</b></i>, Unknown Authors <code>2025.02</code></li>
-            <li><i><b>Advancing Math Reasoning in Language Models: The Impact of Problem-Solving Data, Data Synthesis Methods, and Training Stages</b></i>, Unknown Authors <code>2025.01</code></li>
-            <li><i><b>Don't Get Lost in the Trees: Streamlining LLM Reasoning by Overcoming Tree Search Exploration Pitfalls</b></i>, Unknown Authors <code>2025.02</code></li>
-            <li><i><b>Large Language Models Are Reasoning Teachers</b></i>, Unknown Authors <code>2023.07</code></li>
-            <li><i><b>Open R1</b></i>, Unknown Authors <code>2025.01</code></li>
-            <li><i><b>Enhancing Reasoning Capabilities of LLMs via Principled Synthetic Logic Corpus</b></i>, Unknown Authors <code>2024.09</code></li>
-            <li><i><b>System-2 Mathematical Reasoning via Enriched Instruction Tuning</b></i>, Unknown Authors <code>2024.12</code></li>
-            <li><i><b>Brain-Inspired Two-Stage Approach: Enhancing Mathematical Reasoning by Imitating Human Thought Processes</b></i>, Unknown Authors <code>2024.03</code></li>
-            <li><i><b>Distillation Scaling Laws</b></i>, Unknown Authors <code>2025.02</code></li>
-            <li><i><b>Unveiling the Mechanisms of Explicit CoT Training: How Chain-of-Thought Enhances Reasoning Generalization</b></i>, Unknown Authors <code>2025.02</code></li>
-            <li><i><b>O1 Replication Journey--Part 2: Surpassing O1-preview through Simple Distillation, Big Progress or Bitter Lesson?</b></i>, Unknown Authors <code>2024.11</code></li>
-            <li><i><b>Imitate, explore, and self-improve: A reproduction report on slow-thinking reasoning systems</b></i>, Unknown Authors <code>2024.12</code></li>
-            <li><i><b>Openai o1 system card</b></i>, Unknown Authors <code>2024.12</code></li>
-            <li><i><b>LIMO: Less is More for Reasoning</b></i>, Unknown Authors <code>2025.02</code></li>
-            <li><i><b>RedStar: Does Scaling Long-CoT Data Unlock Better Slow-Reasoning Systems?</b></i>, Unknown Authors <code>2025.01</code></li>
-            <li><i><b>Star: Bootstrapping reasoning with reasoning</b></i>, Unknown Authors <code>2022.11</code></li>
-            <li><i><b>BOLT: Bootstrap Long Chain-of-Thought in Language Models without Distillation</b></i>, Unknown Authors <code>2025.02</code></li>
-            <li><i><b>Reinforced self-training (rest) for language modeling</b></i>, Unknown Authors <code>2023.08</code></li>
+            <li><i><b>Portable Reward Tuning: Towards Reusable Fine-Tuning across Different Pretrained Models</b></i>, Chijiwa et al., <code>2025.02</code></li>
+            <li><i><b>STeCa: Step-level Trajectory Calibration for LLM Agent Learning</b></i>, Wang et al., <code>2025.02</code></li>
+            <li><i><b>V-star: Training verifiers for self-taught reasoners</b></i>, Hosseini et al., <code>2024.02</code></li>
+            <li><i><b>Beyond Human Data: Scaling Self-Training for Problem-Solving with Language Models</b></i>, Singh et al., <code>2024.04</code></li>
+            <li><i><b>FastMCTS: A Simple Sampling Strategy for Data Synthesis</b></i>, Li et al., <code>2025.02</code></li>
+            <li><i><b>Interactive Evolution: A Neural-Symbolic Self-Training Framework For Large Language Models</b></i>, Xu et al., <code>2024.06</code></li>
+            <li><i><b>LLMs Can Teach Themselves to Better Predict the Future</b></i>, Turtel et al., <code>2025.02</code></li>
+            <li><i><b>Deepseek-r1: Incentivizing reasoning capability in llms via reinforcement learning</b></i>, Guo et al., <code>2025.01</code></li>
+            <li><i><b>Sft memorizes, rl generalizes: A comparative study of foundation model post-training</b></i>, Chu et al., <code>2025.01</code></li>
+            <li><i><b>Demystifying Long Chain-of-Thought Reasoning in LLMs</b></i>, Yeo et al., <code>2025.02</code></li>
+            <li><i><b>Advancing Math Reasoning in Language Models: The Impact of Problem-Solving Data, Data Synthesis Methods, and Training Stages</b></i>, Chen et al., <code>2025.01</code></li>
+            <li><i><b>Don't Get Lost in the Trees: Streamlining LLM Reasoning by Overcoming Tree Search Exploration Pitfalls</b></i>, Wang et al., <code>2025.02</code></li>
+            <li><i><b>Large Language Models Are Reasoning Teachers</b></i>, Ho et al., <code>2023.07</code></li>
+            <li><i><b>Open R1</b></i>, Huggingface Team et al., <code>2025.01</code></li>
+            <li><i><b>Enhancing Reasoning Capabilities of LLMs via Principled Synthetic Logic Corpus</b></i>, Morishita et al., <code>2024.09</code></li>
+            <li><i><b>System-2 Mathematical Reasoning via Enriched Instruction Tuning</b></i>, Cai et al., <code>2024.12</code></li>
+            <li><i><b>Brain-Inspired Two-Stage Approach: Enhancing Mathematical Reasoning by Imitating Human Thought Processes</b></i>, Chen et al., <code>2024.03</code></li>
+            <li><i><b>Distillation Scaling Laws</b></i>, Busbridge et al., <code>2025.02</code></li>
+            <li><i><b>Unveiling the Mechanisms of Explicit CoT Training: How Chain-of-Thought Enhances Reasoning Generalization</b></i>, Yao et al., <code>2025.02</code></li>
+            <li><i><b>O1 Replication Journey--Part 2: Surpassing O1-preview through Simple Distillation, Big Progress or Bitter Lesson?</b></i>, Huang et al., <code>2024.11</code></li>
+            <li><i><b>Imitate, explore, and self-improve: A reproduction report on slow-thinking reasoning systems</b></i>, Min et al., <code>2024.12</code></li>
+            <li><i><b>Openai o1 system card</b></i>, Jaech et al., <code>2024.12</code></li>
+            <li><i><b>Deepseek-r1: Incentivizing reasoning capability in llms via reinforcement learning</b></i>, Guo et al., <code>2025.01</code></li>
+            <li><i><b>LIMO: Less is More for Reasoning</b></i>, Ye et al., <code>2025.02</code></li>
+            <li><i><b>RedStar: Does Scaling Long-CoT Data Unlock Better Slow-Reasoning Systems?</b></i>, Xu et al., <code>2025.01</code></li>
+            <li><i><b>Star: Bootstrapping reasoning with reasoning</b></i>, Zelikman et al., <code>2022.11</code></li>
+            <li><i><b>BOLT: Bootstrap Long Chain-of-Thought in Language Models without Distillation</b></i>, Pang et al., <code>2025.02</code></li>
+            <li><i><b>Reinforced self-training (rest) for language modeling</b></i>, Gulcehre et al., <code>2023.08</code></li>
           </ul>
         </div>
       </ul>
