--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
             <li><i><b>BOLT: Bootstrap Long Chain-of-Thought in Language Models without Distillation</b></i>, Pang et al., <code>2025.02</code> [<a href="https://arxiv.org/abs/2502.03860" target="_blank">Link</a>]</li>
             <li><i><b>Reinforced self-training (rest) for language modeling</b></i>, Gulcehre et al., <code>2023.08</code> [<a href="https://arxiv.org/abs/2308.08998" target="_blank">Link</a>]</li>
             <li><i><b>Deepseek-r1: Incentivizing reasoning capability in llms via reinforcement learning</b></i>, Guo et al., <code>2025.01</code> [<a href="https://arxiv.org/abs/2501.12948" target="_blank">Link</a>]</li>
-          <h2>Extensive Exploration</h2>
-          <h3>Exploration Scaling</h3>
+        <h2>Extensive Exploration</h2>
+        <h3>Exploration Scaling</h3>
           <li><i><b>ECM: A Unified Electronic Circuit Model for Explaining the Emergence of In-Context Learning and Chain-of-Thought in Large Language Model</b></i>, Chen et al., <code>2025.02</code> [<a href="https://arxiv.org/abs/2502.03325" target="_blank">Link</a>]</li>
           <li><i><b>Complexity-Based Prompting for Multi-step Reasoning</b></i>, Yao Fu and Hao Peng and Ashish Sabharwal and Peter Clark and Tushar Khot et al., <code>2023.02</code> [<a href="https://openreview.net/forum?id=yf1icZHC-l9" target="_blank">Link</a>]</li>
           <li><i><b>Openai o1 system card</b></i>, Jaech et al., <code>2024.12</code> [<a href="https://arxiv.org/abs/2412.16720" target="_blank">Link</a>]</li>
@@ -330,7 +330,7 @@
           <li><i><b>ECM: A Unified Electronic Circuit Model for Explaining the Emergence of In-Context Learning and Chain-of-Thought in Large Language Model</b></i>, Chen et al., <code>2025.02</code> [<a href="https://arxiv.org/abs/2502.03325" target="_blank">Link</a>]</li>
           <li><i><b>A simple and provable scaling law for the test-time compute of large language models</b></i>, Chen et al., <code>2024.11</code> [<a href="https://arxiv.org/abs/2411.19477" target="_blank">Link</a>]</li>
           <li><i><b>Is Depth All You Need? An Exploration of Iterative Reasoning in LLMs</b></i>, Wu et al., <code>2025.02</code> [<a href="https://arxiv.org/abs/2502.10858" target="_blank">Link</a>]</li>
-          <h3>Internal Exploration</h3>
+        <h3>Internal Exploration</h3>
           <li><i><b>Sft memorizes, rl generalizes: A comparative study of foundation model post-training</b></i>, Chu et al., <code>2025.01</code> [<a href="https://arxiv.org/abs/2501.17161" target="_blank">Link</a>]</li>
           <li><i><b>Satori: Reinforcement Learning with Chain-of-Action-Thought Enhances LLM Reasoning via Autoregressive Search</b></i>, Shen et al., <code>2025.02</code> [<a href="https://arxiv.org/abs/2502.02508" target="_blank">Link</a>]</li>
           <li><i><b>Demystifying Long Chain-of-Thought Reasoning in LLMs</b></i>, Yeo et al., <code>2025.02</code> [<a href="https://arxiv.org/abs/2502.03373" target="_blank">Link</a>]</li>
@@ -373,6 +373,7 @@
           Li Erran Li and Raluca Ada Popa and Ion Stoica et al., <code>2025.02</code></li>
           <li><i><b>Kimi k1. 5: Scaling reinforcement learning with llms</b></i>, Team et al., <code>2025.01</code> [<a href="https://arxiv.org/abs/2501.12599" target="_blank">Link</a>]</li>
           <li><i><b>Chain of Preference Optimization: Improving Chain-of-Thought Reasoning in LLMs</b></i>, Zhang et al., <code>2024.09</code> [<a href="https://proceedings.neurips.cc/paper_files/paper/2024/file/00d80722b756de0166523a87805dd00f-Paper-Conference.pdf" target="_blank">Link</a>]</li>
+        <h3>External Exploration</h3>
           <li><i><b>TPO: Aligning Large Language Models with Multi-branch \& Multi-step Preference Trees</b></i>, Liao et al., <code>2024.10</code> [<a href="https://arxiv.org/abs/2410.12854" target="_blank">Link</a>]</li>
           <li><i><b>Thinking Preference Optimization</b></i>, Yang et al., <code>2025.02</code> [<a href="https://arxiv.org/abs/2502.13173" target="_blank">Link</a>]</li>
           <li><i><b>Kimi k1. 5: Scaling reinforcement learning with llms</b></i>, Team et al., <code>2025.01</code> [<a href="https://arxiv.org/abs/2501.12599" target="_blank">Link</a>]</li>
