--- a/index.html
+++ b/index.html
@@ -57,30 +57,31 @@
                             <div class="is-size-5 publication-authors">
                               <!-- Paper authors -->
                               <span class="author-block">
-                                <a href="https://lightchen233.github.io/" target="_blank">Qiguang Chen</a><sup>*</sup>,</span>
-                                <span class="author-block">
-                                  <a href="https://faculty.csu.edu.cn/qinlibo/zh_CN/index.htm" target="_blank">Libo Qin</a>,</span>
-                                  <span class="author-block">
-                                    <a href="https://github.com/FarzoneILIN" target="_blank">Jinhao Liu</a>,
-                                  </span>
-                                  <span class="author-block">
-                                    <a href="https://github.com/sfasfaffa" target="_blank">Dengyun Peng</a>,
-                                  </span>
-                                  <span class="author-block">
-                                    <a href="https://github.com/GoatCsu" target="_blank">Te Gao</a>,
-                                  </span>
-                                  <span class="author-block">
-                                    <a href="https://aaron617.github.io/" target="_blank">MengKang Hu</a>,
-                                  </span>
-                                  <span class="author-block">
-                                    <a href="https://chewanxiang.com/" target="_blank">Wanxiang Che</a>
-                                  </span>
-                                  </div>
-                  <div class="is-size-5 publication-authors">
-                    <span class="author-block">Harbin Institude of Technology</span>
-                    <!-- <span class="author-block">Harbin Institude of Technology<br>Conferance name and year</span> -->
-                    <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
-                  </div>
+                                  <a href="https://lightchen233.github.io/" target="_blank">Qiguang Chen</a><sup>+</sup>,</span>
+                              <span class="author-block">
+                                  <a href="https://faculty.csu.edu.cn/qinlibo/zh_CN/index.htm" target="_blank">Libo Qin</a><sup>*</sup>,</span>
+                              <span class="author-block">
+                                  <a href="https://github.com/FarzoneILIN" target="_blank">Jinhao Liu</a><sup>+</sup>,</span>
+                              <span class="author-block">
+                                  <a href="https://github.com/sfasfaffa" target="_blank">Dengyun Peng</a><sup>+</sup>,</span>
+                              <span class="author-block">
+                                  <a href="#" target="_blank">Jiannan Guan</a><sup>+</sup>,</span>  <!-- 补充链接 -->
+                              <span class="author-block">
+                                  <a href="#" target="_blank">Peng Wang</a><sup>*</sup>,</span>    <!-- 补充链接 -->
+                              <span class="author-block">
+                                  <a href="https://aaron617.github.io/" target="_blank">Mengkang Hu</a><sup>#</sup>,</span>
+                              <span class="author-block">
+                                  <a href="#" target="_blank">Yuhang Zhou</a><sup>&</sup>,</span>   <!-- 补充链接 -->
+                              <span class="author-block">
+                                  <a href="https://chewanxiang.com/" target="_blank">Wangxiang Che</a><sup>+</sup></span>
+                          </div>
+                          
+                          <div class="is-size-5 publication-authors">
+                              <span class="author-block">Harbin Institute of Technology<sup>+</sup>,</span>
+                              <span class="author-block">Central South University<sup>*</sup>,</span>
+                              <span class="author-block">The University of Hong Kong<sup>#</sup>,</span>
+                              <span class="author-block">Fudan University<sup>&</sup></span>
+                          </div>
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
@@ -200,6 +201,13 @@
      <div class="item">
       <!-- Your image here -->
       <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
+      <h2 class="subtitle has-text-centered">
+        Fourth image description.
+      </h2>
+    </div>
+    <div class="item">
+      <!-- Your image here -->
+      <img src="static/images/carousel5.jpg" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
         Fourth image description.
       </h2>
