--- a/index.html
+++ b/index.html
@@ -179,6 +179,22 @@
         <div class="item">
           <!-- Your image here -->
           <div class="image-container">
+            <img src="static/images/f0.jpg" alt="MY ALT TEXT"/>
+          </div>
+          <h2 class="subtitle has-text-centered">
+          </h2>
+        </div>
+        <div class="item">
+          <!-- Your image here -->
+          <div class="image-container">
+            <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
+          </div>
+          <h2 class="subtitle has-text-centered">
+          </h2>
+        </div>
+        <div class="item">
+          <!-- Your image here -->
+          <div class="image-container">
             <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
           </div>
           <h2 class="subtitle has-text-centered">
@@ -195,7 +211,7 @@
         <div class="item">
           <!-- Your image here -->
           <div class="image-container">
-            <img src="static/images/f5.jpg" alt="MY ALT TEXT"/>
+            <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
           </div>
           <h2 class="subtitle has-text-centered">
           </h2>
@@ -203,7 +219,15 @@
         <div class="item">
           <!-- Your image here -->
           <div class="image-container">
-            <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
+            <img src="static/images/f7.jpg" alt="MY ALT TEXT"/>
+          </div>
+          <h2 class="subtitle has-text-centered">
+          </h2>
+        </div>
+        <div class="item">
+          <!-- Your image here -->
+          <div class="image-container">
+            <img src="static/images/f5.jpg" alt="MY ALT TEXT"/>
           </div>
           <h2 class="subtitle has-text-centered">
           </h2>
@@ -243,7 +267,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 500px; /* Adjusted to double the height (from 300px to 600px) */
+    height: 510px; /* Adjusted to double the height (from 300px to 600px) */
     overflow: hidden;
   }
 
