--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
           <h2 class="subtitle has-text-centered">
           </h2>
         </div>
+
         <div class="item">
           <!-- Your image here -->
           <div class="image-container">
@@ -287,7 +288,7 @@
       <div id="type" style="display:none;">Paper List</div>
       <ul>
         <div id="mllm-paperlist">
-          <h2>deep_reasoning.tex</h2>
+          <h2>Deep Reasoning</h2>
           <h3>Deep Reasoning Execution</h3>
           <ul>
           <li><i><b>Generative language modeling for automated theorem proving</b></i>, Polu et al., <a href="https://arxiv.org/abs/2009.03393" target="_blank"><img src="https://img.shields.io/badge/arXiv-2020.09-red" alt="arXiv Badge"></a></li>
@@ -406,7 +407,7 @@
           <li><i><b>LIMO: Less is More for Reasoning</b></i>, Ye et al., <a href="https://arxiv.org/abs/2502.03387" target="_blank"><img src="https://img.shields.io/badge/arXiv-2025.02-red" alt="arXiv Badge"></a></li>
           <li><i><b>BOLT: Bootstrap Long Chain-of-Thought in Language Models without Distillation</b></i>, Pang et al., <a href="https://arxiv.org/abs/2502.03860" target="_blank"><img src="https://img.shields.io/badge/arXiv-2025.02-red" alt="arXiv Badge"></a></li>
           </ul>
-          <h2>extensive_exploration.tex</h2>
+          <h2>Extensive Exploration</h2>
           <h3>Exploration Scaling</h3>
           <ul>
           <li><i><b>Greedy Policy Search: A Simple Baseline for Learnable Test-Time Augmentation</b></i>, Lyzhov et al., <a href="https://proceedings.mlr.press/v124/lyzhov20a.html" target="_blank"><img src="https://img.shields.io/badge/PDF-2020.00-blue" alt="PDF Badge"></a></li>
@@ -575,8 +576,8 @@
           <li><i><b>STeCa: Step-level Trajectory Calibration for LLM Agent Learning</b></i>, Wang et al., <a href="https://arxiv.org/abs/2502.14276" target="_blank"><img src="https://img.shields.io/badge/arXiv-2025.02-red" alt="arXiv Badge"></a></li>
           <li><i><b>Thinking Preference Optimization</b></i>, Yang et al., <a href="https://arxiv.org/abs/2502.13173" target="_blank"><img src="https://img.shields.io/badge/arXiv-2025.02-red" alt="arXiv Badge"></a></li>
           </ul>
-          <h2>feasible_reflection.tex</h2>
-          <h3>Feedback</h3>
+          <h2>Feasible Reflection</h2>
+          <h3>Feedback</h3> 
           <ul>
           <li><i><b>Concrete problems in AI safety</b></i>, Amodei et al., <a href="https://arxiv.org/abs/1606.06565" target="_blank"><img src="https://img.shields.io/badge/arXiv-2016.06-red" alt="arXiv Badge"></a></li>
           <li><i><b>Training verifiers to solve math word problems</b></i>, Cobbe et al., <a href="https://arxiv.org/abs/2110.14168" target="_blank"><img src="https://img.shields.io/badge/arXiv-2021.10-red" alt="arXiv Badge"></a></li>
@@ -735,7 +736,7 @@
           <li><i><b>MM-Verify: Enhancing Multimodal Reasoning with Chain-of-Thought Verification</b></i>, Sun et al., <a href="https://arxiv.org/abs/2502.13383" target="_blank"><img src="https://img.shields.io/badge/arXiv-2025.02-red" alt="arXiv Badge"></a></li>
           <li><i><b>ARIES: Stimulating Self-Refinement of Large Language Models by Iterative Preference Optimization</b></i>, Zeng et al., <a href="https://arxiv.org/abs/2502.05605" target="_blank"><img src="https://img.shields.io/badge/arXiv-2025.02-red" alt="arXiv Badge"></a></li>
           </ul>
-          <h2>analysis.tex</h2>
+          <h2>Analysis</h2>
           <h3>Analysis \& Explanation for Long CoT</h3>
           <ul>
           <li><i><b>Greedy Policy Search: A Simple Baseline for Learnable Test-Time Augmentation</b></i>, Lyzhov et al., <a href="https://proceedings.mlr.press/v124/lyzhov20a.html" target="_blank"><img src="https://img.shields.io/badge/PDF-2020.00-blue" alt="PDF Badge"></a></li>
@@ -892,7 +893,7 @@
           <li><i><b>Code-Vision: Evaluating Multimodal LLMs Logic Understanding and Code Generation Capabilities</b></i>, Wang et al., <a href="https://arxiv.org/abs/2502.11829" target="_blank"><img src="https://img.shields.io/badge/arXiv-2025.02-red" alt="arXiv Badge"></a></li>
           <li><i><b>Agentic Reasoning: Reasoning LLMs with Tools for the Deep Research</b></i>, Wu et al., <a href="https://arxiv.org/abs/2502.04644" target="_blank"><img src="https://img.shields.io/badge/arXiv-2025.02-red" alt="arXiv Badge"></a></li>
           </ul>
-          <h2>future.tex</h2>
+          <h2>Future</h2>
           <h3>Agentic \& Embodied Long CoT</h3>
           <ul>
           <li><i><b>Large language models as commonsense knowledge for large-scale task planning</b></i>, Zhao et al., <img src="https://img.shields.io/badge/No Link-2023.00-lightgrey" alt="No Link Badge"></li>
